feat: JOIN API && CORS